Experimented with different properties for work containers but still cannot align projects correctly

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,39 +50,44 @@ section {
 }
 
 .work-sample-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px;
     justify-content: space-around;
+    color: #ffffff;
+}
+
+.work-sample-container > .work-sample:nth-child(1) {
+    max-width: 500px;
+    max-height: auto;
+}
+
+.work-sample-container > .work-sample:nth-child(1) img {
+    max-width: 500px;
+    width: 100%;
 }
 
 .work-sample {
-  margin: 1rem;
   text-align: center;
   padding: 1rem;
   border: 2px solid #10525b;
   background-color:#00a199;
-  max-width: 300px;
   box-sizing: border-box;
 }
 
 .work-sample img {
   width: 100%;
-  max-width: 300px;
+  max-width: 100%;
   height: auto;
   display: block;
-  border: 4px solid #10525b;
+  border: 2px solid #10525b;
   margin: 0 auto;
   border-radius: 6px;
 }
 
-.work-sample:first-child img {
-    max-width: 400px;
-}
-
-
 @media (min-width: 768px) {
     .work-sample img {
-        width: 200px
+        width: 200px;
     }
 }
 
@@ -90,6 +95,14 @@ section {
     .work-sample img {
         width: 200px
     }
+}
+
+footer {
+    background-color: #10525b;
+    color:#ffffff;
+    padding: 1rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 /* TODO: How to make the project boxes smaller, rather than them take up the whole width of the screen */
